# LoveStringH

./: CMakeLists.txt  Form1.Designer.cs  Form1.cs  FormRegex.Designer.cs  FormRegex.cs  LoveStringHForm.Designer.cs  LoveStringHForm.cs  LoveStringH_dotnet.csproj  Program.cs  RegexHandler.cs  ctrex.hpp  encoder.cpp  encoder.cs  encoder.hpp  encoder_ex.hpp  helper_func.hpp  translit.cpp  translit.cs  translit.hpp  translit_arabic.cpp  translit_arabic.cs  translit_cyrillic.cpp  translit_cyrillic.cs  translit_ex.hpp  translit_greek.cpp  translit_greek.cs  translit_hangul.cpp  translit_hangul.cs  translit_latin.cpp  translit_latin.cs
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/huhu9001/lovestringh/: MainActivity.kt
android/app/src/main/java/com/huhu9001/lovestringh/translit/: Greek.kt
android/app/src/main/java/com/huhu9001/lovestringh/ui/home/: HomeFragment.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_home.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
win32/: encoder_win32.cpp  main_win32.cpp
windows/: CMakeLists.txt  constdict.hpp  ctrex.hpp  encoder.cpp  encoder.hpp  encoder_ex.hpp  translit.hpp  translit_arabic.cpp  translit_cyrillic.cpp  translit_greek.cpp  translit_hangul.cpp  translit_latin.cpp
windows/win32/: encoder_win32.cpp  main_win32.cpp
(+2 files in other folders)
